--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version : "3.3"
 services :
   web :
-     image: "springsloth/my-app:latest"
+     image: "souravk45/my-app:latest"
        #build:
        #context: .
      ports :
